# calced

./: .gitignore  CLAUDE.md  CNAME  LICENSE  Makefile  README.md  calced  example.md  example.nc  index.html  notecalc  test_format.md  test_si.md  tx_price.nc
0/: index.html
notes/: result-alignment.md
python/: calced.py  pyproject.toml
python/calced/: __init__.py  __main__.py
tests/: basic_arithmetic.md  classify_vectors.json  combinations.md  commas.nc  constants.md  dates.md  decimal_alignment.md  evaluate_vectors.json  format_directives.md  format_directives.nc  functions.md  hex_bin_oct.md  number_formats.md  number_formats.nc  percentages.md  percentages.nc  plain_text.md  rate_conversions.md  result_stripping.md  scientific_input.md  scientific_input.nc  separator.md  si_prefixes.md  si_prefixes.nc  test_classify.py  test_cli.py  test_evaluate.py  test_properties.py  test_web.js  total.md  total.nc  unit_conversions.md  variables.md  variables.nc
web/: index.html  test.mjs
